--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 <body>
   <h1>Benvenuti su Segni d'Argento®!</h1>
   <p>
-    Avvisiamo la gentile clientela che a breve gestiremo tutte le attività del nostro negozio online
+    Avvisiamo la gentile clientela che a breve trasferiremo tutte le attività del nostro negozio online
     esclusivamente su <strong>Amazon</strong>.
-  </p>
-  <p>
-    Il nostro <em>Amazon Store</em> è già pienamente funzionante e raggiungibile al link riportato sotto:
-  </p>
-  <p>
     Nel frattempo, tutti gli ordini che verranno aperti su Shopify verranno evasi regolarmente.
+  </p>
+  <p>
+    Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul link di seguito:
+  </p>
+  <p>
+    
   </p>
   <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" target="_blank">Visita Segni d'Argento® su Amazon</a>
 </body>
