--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <p>
     Avvisiamo la gentile clientela che a breve trasferiremo tutte le attività del nostro negozio online
     esclusivamente su <strong>Amazon</strong>.
-    Nel frattempo, tutti gli ordini che verranno aperti su Shopify verranno evasi regolarmente.
+    Naturalmente finché il negozio Shopify rimarrà attivo, tutti gli ordini aperti verranno evasi regolarmente.
   </p>
   <p>
-    Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul link di seguito:
+    Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante riportato qui sotto:
   </p>
   <p>
     
