--- a/index.html
+++ b/index.html
@@ -28,4 +28,7 @@
   </p>
   <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" target="_blank">Visita Segni d'Argento® su Amazon</a>
 </body>
+<img src="gioielli800p.jpg" 
+     alt="Gioielli in argento Segni d'Argento" 
+     style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
 </html>
