--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <p>
     Avvisiamo la gentile clientela che a breve trasferiremo tutte le attività del nostro negozio online
     esclusivamente su <strong>Amazon</strong>.
-    Naturalmente finché il negozio Shopify rimarrà attivo, tutti gli ordini aperti verranno evasi regolarmente.
+    Finché il negozio Shopify rimarrà attivo, tutti gli ordini aperti verranno evasi regolarmente.
   </p>
   <p>
-    Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante riportato qui sotto:
+    Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante di seguito:
   </p>
   <p>
     
