--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   <p>
     
   </p>
- <div style="margin-top: 30px;">
-  <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
-    target="_blank" class="btn amazon">Visita Segni d'Argento® su Amazon</a>
+  <div class="button-container">
+    <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
+       target="_blank" class="btn amazon">Visita Segni d'Argento® su Amazon</a>
 
-  <a href="https://www.instagram.com/segnidargento/" 
-    target="_blank" class="btn instagram">Seguici su Instagram</a>
+    <a href="https://www.instagram.com/segnidargento/" 
+       target="_blank" class="btn instagram">Seguici su Instagram</a>
  </div>
 </body>
 </html>
