--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
        target="_blank" class="btn amazon">Visita Segni d'Argento® su Amazon</a>
 
-    <a href="https://www.instagram.com/tuoprofilo" 
+    <a href="https://www.instagram.com/segnidargento/" 
        target="_blank" class="btn instagram">Seguici su Instagram</a>
   </div>
 </body>
