--- a/index.html
+++ b/index.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
-<img src="gioielli800p.jpg" 
-     alt="Gioielli in argento Segni d'Argento" 
-     style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
 <html lang="it">
 <head>
   <meta charset="UTF-8">
   <title>Segni d'Argento</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; padding: 50px; background: #f9f9f9; }
-    h1 { color: #444; }
-    p { font-size: 18px; line-height: 1.6; max-width: 600px; margin: 20px auto; }
-    a { display: inline-block; margin-top: 20px; font-size: 20px; 
-        padding: 12px 24px; background: #ff9900; color: white; 
-        text-decoration: none; border-radius: 8px; }
-    a:hover { background: #cc7a00; }
+    body { 
+      font-family: Arial, sans-serif; 
+      text-align: center; 
+      padding: 50px; 
+      background: #f9f9f9; 
+    }
+    h1 { 
+      color: #444; 
+    }
+    p { 
+      font-size: 18px; 
+      line-height: 1.6; 
+      max-width: 600px; 
+      margin: 20px auto; 
+    }
+    .btn {
+      display: block; /* Ogni pulsante su una nuova riga */
+      font-size: 20px;
+      padding: 12px 24px;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      margin: 10px auto; /* Centra e aggiunge spazio verticale */
+      width: fit-content; /* Larghezza basata sul contenuto */
+    }
+    .amazon { 
+      background: #ff9900; 
+    }
+    .amazon:hover { 
+      background: #cc7a00; 
+    }
+    .instagram { 
+      background: #e1306c; 
+    }
+    .instagram:hover { 
+      background: #b02452; 
+    }
+    .button-container {
+      margin-top: 30px; /* Spazio sopra i pulsanti */
+    }
   </style>
 </head>
 <body>
@@ -26,15 +56,14 @@
   <p>
     Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante di seguito:
   </p>
-  <p>
-    
-  </p>
-<div class="button-container">
+  <img src="gioielli800p.jpg" 
+       alt="Gioielli in argento Segni d'Argento" 
+       style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+  <div class="button-container">
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
        target="_blank" class="btn amazon">Visita Segni d'Argento® su Amazon</a>
-
-    <a href="https://www.instagram.com/tuoprofilo" 
+    <a href="https://www.instagram.com/segnidargento/" 
        target="_blank" class="btn instagram">Seguici su Instagram</a>
-</div>
+  </div>
 </body>
 </html>
