--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       margin: 20px auto; 
     }
     .btn {
-      display: block; /* Ogni pulsante su una nuova riga */
+      display: block; /* Forza ogni pulsante su una nuova riga */
       font-size: 20px;
       padding: 12px 24px;
       color: white;
@@ -29,21 +29,10 @@
       margin: 10px auto; /* Centra e aggiunge spazio verticale */
       width: fit-content; /* Larghezza basata sul contenuto */
     }
-    .amazon { 
-      background: #ff9900; 
-    }
-    .amazon:hover { 
-      background: #cc7a00; 
-    }
-    .instagram { 
-      background: #e1306c; 
-    }
-    .instagram:hover { 
-      background: #b02452; 
-    }
-    .button-container {
-      margin-top: 30px; /* Spazio sopra i pulsanti */
-    }
+    .amazon { background: #ff9900; }
+    .amazon:hover { background: #cc7a00; }
+    .instagram { background: #e1306c; }
+    .instagram:hover { background: #b02452; }
   </style>
 </head>
 <body>
@@ -59,10 +48,10 @@
   <img src="gioielli800p.jpg" 
        alt="Gioielli in argento Segni d'Argento" 
        style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
-  <div class="button-container">
+  <div>
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
        target="_blank" class="btn amazon">Visita Segni d'Argento® su Amazon</a>
-    <a href="https://www.instagram.com/segnidargento/" 
+    <a href="https://www.instagram.com/tuoprofilo" 
        target="_blank" class="btn instagram">Seguici su Instagram</a>
   </div>
 </body>
