--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
   <p>
     Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante di seguito:
   </p>
-  <img src="gioielli800p.jpg" 
-       alt="Gioielli in argento Segni d'Argento" 
-       style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+  
   <div>
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
        target="_blank" class="btn amazon">Visita Segni d'Argento® su Amazon</a>
-    <a href="https://www.instagram.com/tuoprofilo" 
+    <a href="https://www.instagram.com/segnidargento/" 
        target="_blank" class="btn instagram">Seguici su Instagram</a>
   </div>
+  <img src="gioielli800p.jpg" 
+       alt="Gioielli in argento Segni d'Argento" 
+       style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
 </body>
 </html>
