--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   
   <div>
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
-       target="_blank" class="btn amazon">Visita Segni d'Argento® su Amazon</a>
+       target="_blank" class="btn amazon">Segni d'Argento® su Amazon.it</a>
     <a href="https://www.instagram.com/segnidargento/" 
        target="_blank" class="btn instagram">Seguici su Instagram</a>
   </div>
