--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <h1>Benvenuti su Segni d'Argento®!</h1>
   <p>
-    Avvisiamo la gentile clientela che a breve trasferiremo tutte le attività del nostro negozio online
+    Avvisiamo la gentile clientela che a breve trasferiremo tutte le attività del negozio online
     esclusivamente su <strong>Amazon</strong>.
     Finché il negozio Shopify rimarrà attivo, tutti gli ordini aperti verranno evasi regolarmente.
   </p>
