--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
   
   <div>
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
-       target="_blank" class="btn amazon">
-       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon Logo">
-       Segni d'Argento® su Amazon.it
+    target="_blank" class="btn amazon">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg" alt="Amazon Icon" style="width:24px; height:24px;">
+    Segni d'Argento® su Amazon.it
     </a>
 
     <a href="https://www.instagram.com/segnidargento/" 
