--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
     .instagram:hover { 
       background: #b02452; 
     }
+    /* Footer */
+    footer {
+      font-size: 9pt;
+      color: #777;
+      margin-top: 40px;
+    }
   </style>
 </head>
 <body>
@@ -84,5 +90,9 @@
   <img src="gioielli800p.jpg" 
        alt="Gioielli in argento Segni d'Argento" 
        style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+
+  <footer>
+    Segni d'Argento è un marchio registrato. Tutti i diritti riservati. - P.IVA 17713061004
+  </footer>
 </body>
 </html>
