--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     Finché il negozio Shopify rimarrà attivo, tutti gli ordini aperti verranno evasi regolarmente.
   </p>
   <p>
-    Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante di seguito:
+    Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante di seguito: offriamo la spedizione sempre gratuita per tutti i nostri gioielli! I clienti potranno approfittare delle promozioni speciali stagionali.
   </p>
   
   <div>
