--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
   </style>
 </head>
 <body>
-  <h1>Benvenuti su Segni d'Argento®!</h1>
+  <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
     Avvisiamo la gentile clientela che a breve trasferiremo tutte le attività del negozio online
     esclusivamente su <strong>Amazon</strong>.
     Finché il negozio Shopify rimarrà attivo, tutti gli ordini aperti verranno evasi regolarmente.
   </p>
   <p>
-    Il nostro <em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante di seguito: offriamo la spedizione sempre gratuita per tutti i nostri gioielli! I clienti potranno approfittare delle promozioni speciali stagionali.
+    Il nostro <em>Amazon Store</em> è già operativo e visitabile cliccando sul pulsante di seguito: offriamo la spedizione sempre gratuita per tutti i nostri gioielli. Inoltre potrete approfittare delle promozioni speciali stagionali.
   </p>
   
   <div>
