--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Gioielli in Argento 925 massiccio e pietre semipreziose scelte, con un design originale e senza tempo, 100% artigianali e Made in Italy. Siamo specializzati nell'antica tecnica della cera persa">
   <title>Segni d'Argento</title>
   <style>
     body { 
