--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Gioielli in Argento 925 massiccio e pietre semipreziose scelte, con un design originale e senza tempo, 100% artigianali e Made in Italy. Siamo specializzati nell'antica tecnica della cera persa">
-  <title>Segni d'Argento</title>
+  <meta name="description" content="Gioielli artigianali in Argento 925 massiccio e pietre semipreziose dal design originale e senza tempo, 100% made in Italy. Specializzati nell'antica tecnica della cera persa">
+  <meta name="keywords" content="gioielli argento, gioielli artigianali, gioielli argento 925, gioielli fatti a mano, gioielli made in Italy, gioielli italiani, anelli argento, bracciali argento, gioielli unici, ciondoli argento, bracciali argento, gioielli originali, orecchini argento, gioielli cera persa, Segni d'Argento">
+  <meta name="author" content="Segni d'Argento">
+  <title>Segni d'Argento - Gioielli artigianali in Argento 925</title>
   <style>
     body { 
       font-family: Arial, sans-serif; 
