--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 <body>
   <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
-    Avvisiamo la gentile clientela che a breve trasferiremo tutte le attività del negozio online
+    Avvisiamo la gentile clientela che per ottimizzare il servizio gestiremo tutte le attività del negozio online
     esclusivamente su <strong>Amazon</strong>.
-    Finché il negozio Shopify rimarrà attivo, tutti gli ordini aperti verranno evasi regolarmente.
+    Gli ordini pregressi aperti sulla piattaforma di Shopify sono stati totalmente evasi.
   </p>
   <p>
-    Il nostro <em>Amazon Store</em> è già operativo e visitabile cliccando sul pulsante di seguito: offriamo la spedizione sempre gratuita per tutti i nostri gioielli. Inoltre potrete approfittare delle promozioni speciali stagionali.
+    Il nostro <em>Amazon Store</em> è già pienamente operativo e visitabile cliccando sul pulsante di seguito: offriamo la spedizione sempre gratuita per tutti i nostri gioielli. Inoltre potrete approfittare delle promozioni speciali stagionali.
   </p>
   
   <div>
