--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
        style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
 
   <footer>
-    Segni d'Argento è un marchio registrato. Tutti i diritti riservati. - P.IVA 17713061004
+    Segni d'Argento® è un marchio registrato. Tutti i diritti riservati. - P.IVA 17713061004
   </footer>
 </body>
 </html>
