--- a/index.html
+++ b/index.html
@@ -66,14 +66,11 @@
 <body>
   <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
-    Avvisiamo la gentile clientela che per ottimizzare il servizio gestiremo tutte le attività del negozio online
-    esclusivamente su <strong>Amazon</strong>.
-    Gli ordini pregressi aperti sulla piattaforma di Shopify sono stati totalmente evasi.
+    Avvisiamo la gentile clientela che per ottimizzare il servizio gestiremo le attività del negozio
+    esclusivamente su <strong>Amazon.it</strong>, mentre Shopify non sarà più attivo (i relativi ordini pregressi sono stati tutti evasi).
+    L'<em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante di seguito: offriamo la spedizione sempre gratuita per tutti i nostri gioielli. Inoltre potrete approfittare delle promozioni speciali stagionali.
   </p>
-  <p>
-    Il nostro <em>Amazon Store</em> è già pienamente operativo e visitabile cliccando sul pulsante di seguito: offriamo la spedizione sempre gratuita per tutti i nostri gioielli. Inoltre potrete approfittare delle promozioni speciali stagionali.
-  </p>
-  
+ 
   <div>
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
        target="_blank" class="btn amazon">
