--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Gioielli artigianali in Argento 925 massiccio e pietre semipreziose dal design originale e senza tempo, 100% made in Italy. Specializzati nell'antica tecnica della cera persa">
+  <meta name="description" content="Gioielli artigianali in Argento 925 massiccio e pietre semipreziose dal design originale e senza tempo, 100% made in Italy. Specializzata nell'antica tecnica della cera persa">
   <meta name="keywords" content="gioielli argento, gioielli artigianali, gioielli argento 925, gioielli fatti a mano, gioielli made in Italy, gioielli italiani, anelli argento, bracciali argento, gioielli unici, ciondoli argento, bracciali argento, gioielli originali, orecchini argento, gioielli cera persa, Segni d'Argento">
   <meta name="author" content="Segni d'Argento">
   <title>Segni d'Argento - Gioielli artigianali in Argento 925</title>
@@ -66,9 +66,8 @@
 <body>
   <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
-    Avvisiamo la gentile clientela che per ottimizzare il servizio gestiremo le attività del negozio
-    esclusivamente su <strong>Amazon.it</strong>, mentre Shopify non sarà più attivo (i relativi ordini pregressi sono stati tutti evasi).
-    L'<em>Amazon Store</em> è già pienamente funzionante e visitabile cliccando sul pulsante di seguito: offriamo la spedizione sempre gratuita per tutti i nostri gioielli. Inoltre potrete approfittare delle promozioni speciali stagionali.
+    Scoprite i gioielli unici in Argento 925 e pietre semipreziose sul nostro Store Segni d'Argento® in <strong>Amazon.it</strong>, 
+    L'<em>Amazon Store</em> Offriamo la spedizione sempre gratuita per tutti i nostri gioielli. Inoltre potrete approfittare delle promozioni speciali stagionali. Il negozio è visitabile direttamente cliccando sul pulsante di seguito oppure cercandolo nella barra di ricerca di Amazon.it: 
   </p>
  
   <div>
