--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <body>
   <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
-    Scoprite i gioielli unici in Argento 925 e pietre semipreziose sul nostro Store Segni d'Argento® in <strong>Amazon.it</strong>, 
-    L'<em>Amazon Store</em> Offriamo la spedizione sempre gratuita per tutti i nostri gioielli. Inoltre potrete approfittare delle promozioni speciali stagionali. Il negozio è visitabile direttamente cliccando sul pulsante di seguito oppure cercandolo nella barra di ricerca di Amazon.it: 
+    Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store Segni d'Argento® in <strong>Amazon.it</strong>, 
+    L'<em>Amazon Store</em> Offriamo la spedizione sempre gratuita. Inoltre potrete approfittare delle promozioni speciali stagionali. Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
   </p>
  
   <div>
