--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <body>
   <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
-    Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store Segni d'Argento® in <strong>Amazon.it</strong>, 
-    L'<em>Amazon Store</em> Offriamo la spedizione sempre gratuita. Inoltre potrete approfittare delle promozioni speciali stagionali. Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
+    Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>, 
+    Offriamo la spedizione sempre gratuita. Inoltre potrete approfittare delle promozioni speciali stagionali. Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
   </p>
  
   <div>
