--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
     Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>, 
-    Offriamo la spedizione sempre gratuita. Inoltre potrete approfittare delle promozioni speciali stagionali. Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
+    offriamo la spedizione sempre gratuita. Inoltre potrete approfittare delle promozioni speciali stagionali. Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
   </p>
  
   <div>
