--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
   <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
-    Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>, 
+    Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>. 
     offriamo la <strong>spedizione sempre gratuita</strong>. Inoltre potrete approfittare delle promozioni speciali stagionali.
     Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
   </p>
