--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <h1>Benvenuti su Segni d'Argento®</h1>
   <p>
     Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>. 
-    offriamo la <strong>spedizione sempre gratuita</strong>. Inoltre potrete approfittare delle promozioni speciali stagionali.
+    Offriamo la <strong>spedizione sempre gratuita</strong>. Inoltre potrete approfittare delle promozioni speciali stagionali.
     Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
   </p>
  
