--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
   <p>
     Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>. 
     Offriamo la <strong>spedizione sempre gratuita</strong>. Inoltre potrete approfittare delle promozioni speciali stagionali.
-    Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
   </p>
- 
+    <p>Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
+  </p>
   <div>
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
        target="_blank" class="btn amazon">
