--- a/index.html
+++ b/index.html
@@ -2,136 +2,158 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Gioielli artigianali in Argento 925 massiccio e pietre semipreziose dal design originale e senza tempo, 100% made in Italy. Specializzata nell'antica tecnica della cera persa">
-  <meta name="keywords" content="gioielli argento, gioielli artigianali, gioielli argento 925, gioielli fatti a mano, gioielli made in Italy, gioielli italiani, anelli argento, bracciali argento, gioielli unici, ciondoli argento, bracciali argento, gioielli originali, orecchini argento, gioielli cera persa, Segni d'Argento">
+  <meta name="keywords" content="gioielli argento, gioielli artigianali, gioielli argento 925, gioielli fatti a mano, gioielli made in Italy, anelli argento, bracciali argento, Segni d'Argento">
   <meta name="author" content="Segni d'Argento">
   <title>Segni d'Argento - Gioielli artigianali in Argento 925</title>
   <style>
     body { 
-      font-family: Arial, sans-serif; 
+      font-family: Arial, Helvetica, sans-serif; 
       text-align: center; 
-      padding: 50px; 
+      padding: 40px 20px; 
       background: #f9f9f9; 
+      margin: 0;
     }
     h1 { 
       color: #444; 
+      font-size: 28px;
+      margin-bottom: 20px;
     }
     p { 
-      font-size: 16px; 
+      font-size: 17px;
       line-height: 1.6; 
       max-width: 800px; 
       margin: 20px auto; 
+      color: #333;
     }
+
+    /* Contenitore pulsanti */
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 18px;
+      margin: 35px auto;
+      max-width: 380px;
+    }
+
     .btn {
-      display: flex; 
+      display: flex;
       align-items: center;
       justify-content: center;
-      gap: 10px; 
-      font-size: 17px;
-      padding: 12px 24px;
+      gap: 14px;
+      font-size: 19px;
+      font-weight: 600;
+      padding: 18px 32px;
       text-decoration: none;
-      border-radius: 8px;
-      margin: 10px auto;
-      width: fit-content;
+      border-radius: 12px;
+      width: 100%;
+      max-width: 340px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: all 0.3s ease;
     }
+
     .btn img {
-      height: 24px;
-      width: 24px;
+      height: 32px;
+      width: 32px;
     }
-    /* Pulsante Amazon */
+
+    /* Amazon */
     .amazon { 
       background: #ffffff; 
-      color: #000000; 
-      border: 1px solid #ccc; 
+      color: #000; 
+      border: 2px solid #ff9900;
     }
-    .amazon:hover { 
-      background: #f2f2f2; 
+    .amazon:hover, .amazon:active { 
+      background: #fff8f0; 
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(255,153,0,0.2);
     }
-    /* Pulsante Instagram */
+
+    /* Instagram */
     .instagram { 
-      background: #e1306c; 
-      color: #ffffff; 
+      background: linear-gradient(45deg, #e1306c, #fd1d1d); 
+      color: #fff; 
     }
-    .instagram:hover { 
-      background: #b02452; 
+    .instagram:hover, .instagram:active { 
+      background: linear-gradient(45deg, #c71d58, #e0115f);
+      transform: translateY(-2px);
     }
-    /* Footer */
+
+    /* Immagine gioielli */
+    .hero-img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 16px;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+      margin: 40px auto;
+      display: block;
+    }
+
     footer {
-      font-size: 11pt;
+      font-size: 13px;
       color: #777;
-      margin-top: 40px;
+      margin-top: 50px;
+      padding-top: 20px;
+      border-top: 1px solid #eee;
     }
-  /* Mobile optimization */
-@media (max-width: 600px) {
-  /* Titolo più piccolo */
-  h1 {
-    font-size: 22px;
-  }
 
-  /* Testo leggermente più piccolo */
-  p {
-    font-size: 16px;
-    line-height: 1.5;
-  }
+    /* OTTIMIZZAZIONE MOBILE */
+    @media (max-width: 768px) {
+      h1 { font-size: 26px; }
+      p { font-size: 18px; }
+      
+      .btn {
+        font-size: 20px;
+        padding: 22px 32px;
+        gap: 16px;
+      }
+      .btn img {
+        height: 36px;
+        width: 36px;
+      }
+    }
 
-  /* Pulsanti più grandi */
-  .btn {
-    font-size: 22px;      /* testo più grande */
-    padding: 16px 28px;   /* area clic più grande */
-    gap: 12px;            /* spazio tra icona e testo */
-    width: 90%;           /* facciamo quasi full-width per eleganza */
-    max-width: 300px;     /* non troppo larghi */
-    display: block;       /* centriamo */
-    margin: 10px auto;    /* margine verticale uniforme */
-  }
-
-  /* Icone all’interno dei pulsanti */
-  .btn img {
-    width: 32px;
-    height: 32px;
-  }
-
-  /* Immagine gioielli adattabile */
-  img {
-    width: 100%;
-    max-width: 600px;
-    height: auto;
-  }
-}
-
+    @media (max-width: 480px) {
+      body { padding: 30px 15px; }
+      h1 { font-size: 24px; }
+      .btn {
+        padding: 24px 32px;
+        font-size: 21px;
+      }
+    }
   </style>
 </head>
 <body>
   <h1>Benvenuti su Segni d'Argento®</h1>
+  
   <p>
     Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>. 
-    Offriamo la <strong>spedizione sempre gratuita</strong>. Inoltre potrete approfittare delle promozioni speciali stagionali.
+    Offriamo la <strong>spedizione sempre gratuita</strong> e promozioni speciali stagionali.
   </p>
   
-  <p>Il negozio su Amazon è visitabile cliccando sul pulsante di seguito oppure tramite ricerca in Amazon.it:
-  </p>
-  <div>
+  <p>Il negozio su Amazon è visitabile cliccando qui sotto oppure cercando direttamente “Segni d'Argento” su Amazon.it</p>
+
+  <div class="buttons">
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
        target="_blank" class="btn amazon">
-       <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg" 
-            alt="Amazon Icon">
+       <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg" alt="Amazon">
        Segni d'Argento® su Amazon.it
     </a>
 
     <a href="https://www.instagram.com/segnidargento/" 
        target="_blank" class="btn instagram">
-       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" 
-            alt="Instagram Logo">
+       <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
        Seguici su Instagram
     </a>
   </div>
 
-  <img src="gioielli800p.jpg" 
-       alt="Gioielli in argento Segni d'Argento" 
-       style="max-width: 600px; margin-top: 30px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+  <img src="gioielli800p.jpg" alt="Gioielli artigianali Segni d'Argento" class="hero-img">
 
   <footer>
-    Segni d'Argento® è un marchio registrato. Tutti i diritti riservati. - P.IVA 17713061004
+    Segni d'Argento® è un marchio registrato. Tutti i diritti riservati.<br>
+    P.IVA 17713061004
   </footer>
 </body>
 </html>
