--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   
   <p>
     Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>. 
-    Offriamo la <strong>spedizione sempre gratuita</strong> e promozioni speciali stagionali.
+    Offriamo la <strong>spedizione sempre gratuita</strong> e potrete approfittare delle promozioni speciali stagionali.
   </p>
   
   <p>Il negozio su Amazon è visitabile cliccando qui sotto oppure cercando direttamente “Segni d'Argento” su Amazon.it</p>
