--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     Offriamo la <strong>spedizione sempre gratuita</strong> e potrete approfittare delle promozioni speciali stagionali.
   </p>
   
-  <p>Il negozio su Amazon è visitabile cliccando qui sotto oppure cercando direttamente “Segni d'Argento” su Amazon.it</p>
+  <p>Il negozio su Amazon è visitabile cliccando sul pulsante qui sotto oppure tramite ricerca su Amazon.it. Non dimenticate di seguirci anche su Instagram!</p>
 
   <div class="buttons">
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
