--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     h1 { 
       color: #444; 
-      font-size: 28px;
+      font-size: 30px;
       margin-bottom: 20px;
     }
     p { 
@@ -129,11 +129,12 @@
   <h1>Benvenuti su Segni d'Argento®</h1>
   
   <p>
-    Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose sullo Store <strong>Segni d'Argento®</strong> in <strong>Amazon.it</strong>. 
+    Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose nello Store <strong>Segni d'Argento®</strong> su <strong>Amazon.it</strong>. 
     Offriamo la <strong>spedizione sempre gratuita</strong> e potrete approfittare delle promozioni speciali stagionali.
   </p>
-  
-  <p>Il negozio su Amazon è visitabile cliccando sul pulsante qui sotto oppure tramite ricerca su Amazon.it. Non dimenticate di seguirci anche su Instagram!</p>
+    <p>Il negozio ufficiale Segni d'Argento® è esclusivamente su Amazon ed è visitabile cliccando sul pulsante riportato qui sotto, oppure tramite ricerca su Amazon.it.</p>
+  <p>Diffidate di altri siti di e-commerce e dropshipping estranei che dovessero utilizzare il nostro marchio, immagini di prodotto e descrizioni.</p>
+  <p> Non dimenticate di seguirci anche su Instagram per rimanere aggiornati sulle novità del negozio!</p>
 
   <div class="buttons">
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
