--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   </p>
     <p>Il negozio ufficiale Segni d'Argento® è esclusivamente su Amazon ed è visitabile cliccando sul pulsante riportato qui sotto, oppure tramite ricerca su Amazon.it.</p>
   <p>Diffidate di altri siti di e-commerce e dropshipping estranei che dovessero utilizzare il nostro marchio, immagini di prodotto e descrizioni.</p>
-  <p> Non dimenticate di seguirci anche su Instagram per rimanere aggiornati sulle novità del negozio!</p>
+  <p> Seguiteci anche su Instagram per rimanere aggiornati sulle novità del negozio!</p>
 
   <div class="buttons">
     <a href="https://www.amazon.it/stores/SegnidArgento/page/DDC7B4C4-9E21-41BE-9B7B-96348A00C211" 
