--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
   <h1>Benvenuti su Segni d'Argento®</h1>
   
   <p>
-    Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose nello Store <strong>Segni d'Argento®</strong> su <strong>Amazon.it</strong>. 
-    Offriamo la <strong>spedizione sempre gratuita</strong> e potrete approfittare delle promozioni speciali stagionali.
+      Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose nello Store</p>
+  <p><strong>Segni d'Argento®</strong> su <strong>Amazon.it</strong>. Offriamo la <strong>spedizione sempre gratuita</strong> e potrete approfittare delle promozioni speciali stagionali.
   </p>
-    <p>Il negozio ufficiale Segni d'Argento® è esclusivamente su Amazon ed è visitabile cliccando sul pulsante riportato qui sotto, oppure tramite ricerca su Amazon.it.</p>
+  
+  <p>Il negozio ufficiale è esclusivamente su Amazon ed è visitabile cliccando sul pulsante riportato qui sotto, oppure tramite ricerca su Amazon.it.</p>
   <p>Diffidate di altri siti di e-commerce e dropshipping estranei che dovessero utilizzare il nostro marchio, immagini di prodotto e descrizioni.</p>
   <p> Seguiteci anche su Instagram per rimanere aggiornati sulle novità del negozio!</p>
 
