--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   
  <p>
       Scoprite i nostri gioielli unici creati artigianalmente in Argento 925 e pietre semipreziose nello Store <strong>Segni d'Argento®</strong> su <strong>Amazon.it</strong>.</p>
- <p>  Offriamo la <strong>spedizione sempre gratuita</strong> e potrete approfittare delle promozioni speciali stagionali.
+ <p>  Offriamo la <strong>spedizione tracciata con corriere espresso sempre gratuita</strong>
  </p>
   
   <p>Il negozio ufficiale è esclusivamente su Amazon ed è visitabile cliccando sul pulsante riportato qui sotto, oppure tramite ricerca su Amazon.it.</p>
