--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     h1 { 
       color: #444; 
-      font-size: 30px;
+      font-size: 32px;
       margin-bottom: 20px;
     }
     p { 
@@ -92,7 +92,7 @@
     }
 
     footer {
-      font-size: 14px;
+      font-size: 16px;
       color: #777;
       margin-top: 50px;
       padding-top: 20px;
@@ -130,7 +130,7 @@
   
  <p>
       Scoprite i nostri gioielli unici creati artigianalmente in Argento 925 e pietre semipreziose nello Store <strong>Segni d'Argento®</strong> su <strong>Amazon.it</strong>.</p>
- <p>  Offriamo la <strong>spedizione tracciata con corriere espresso sempre gratuita</strong>
+ <p>  Offriamo la <strong>spedizione tracciata con corriere espresso sempre gratuita.</strong>
  </p>
   
   <p>Il negozio ufficiale è esclusivamente su Amazon ed è visitabile cliccando sul pulsante riportato qui sotto, oppure tramite ricerca su Amazon.it.</p>
