--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <h1>Benvenuti su Segni d'Argento®</h1>
   
  <p>
-      Scoprite i nostri gioielli unici creati artigianalmente in Argento 925 e pietre semipreziose nello Store <strong>Segni d'Argento®</strong> su <strong>Amazon.it</strong>.</p>
+      Scoprite i nostri gioielli unici in Argento 925 e pietre semipreziose, creati artigianalmente in italia e in vendita nello Store <strong>Segni d'Argento®</strong> su <strong>Amazon.it</strong>.</p>
  <p>  Offriamo la <strong>spedizione tracciata con corriere espresso sempre gratuita.</strong>
  </p>
   
