--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Gioielli artigianali in Argento 925 massiccio e pietre semipreziose dal design originale e senza tempo, 100% made in Italy. Specializzata nell'antica tecnica della cera persa">
-  <meta name="keywords" content="gioielli argento, gioielli artigianali, gioielli argento 925, gioielli fatti a mano, gioielli made in Italy, anelli argento, bracciali argento, Segni d'Argento">
+  <meta name="keywords" content="gioielli argento, gioielli artigianali, gioielli argento 925, gioielli fatti a mano, gioielli made in Italy, anelli argento, bracciali argento, Segni d'Argento®">
   <meta name="author" content="Segni d'Argento">
-  <title>Segni d'Argento - Gioielli artigianali in Argento 925</title>
+  <title>Segni d'Argento® - Gioielli artigianali in Argento 925</title>
   <style>
     body { 
       font-family: Arial, Helvetica, sans-serif; 
