--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
  </p>
   
   <p>Il negozio ufficiale è esclusivamente su Amazon ed è visitabile cliccando sul pulsante riportato qui sotto, oppure tramite ricerca su Amazon.it.</p>
-  <p>Diffidate di altri siti e-commerce e dropshipping estranei che dovessero utilizzare il nostro marchio, immagini di prodotto e descrizioni.</p>
+  <p>Diffidate di siti e-commerce e dropshipping estranei che dovessero utilizzare il nostro marchio, immagini di prodotto e descrizioni.</p>
   <p> Seguiteci anche su Instagram per rimanere aggiornati sulle novità del negozio!</p>
 
   <div class="buttons">
