--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   </div>
 
   <img src="gioielli800p.jpg" alt="Gioielli artigianali Segni d'Argento" class="hero-img">
-
+  <img src="made in Italy.jpg" alt="100% Made in Italy" class="small-img">
   <footer>
     Segni d'Argento® è un marchio registrato. Tutti i diritti riservati.<br>
     P.IVA 17713061004
